GNOME Bugzilla – Bug 708814
do not redefine GVfsBackend
Last modified: 2013-09-26 11:38:56 UTC
Created attachment 255801 [details] [review] do not redefine GVfsBackend Hi. On OpenBSD building gvfs 1.18.0 fails with: cc -DHAVE_CONFIG_H -I. -I.. -I.. -I../common -I.. -I../common -I/usr/local/include/gio-unix-2.0/ -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -DSECRET_WITH_UNSTABLE -I/usr/local/include/libsecret-1 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -DG_UDEV_API_IS_SUBJECT_TO_CHANGE -DLIBEXEC_DIR="/usr/local/libexec/" -DMOUNTABLE_DIR="/usr/local/share/gvfs/mounts/" -DGVFS_LOCALEDIR="/usr/local/share/locale" -I/usr/local/include -O2 -pipe -MT gvfsdaemon.lo -MD -MP -MF .deps/gvfsdaemon.Tpo -c gvfsdaemon.c -fPIC -DPIC -o .libs/gvfsdaemon.o In file included from ./gvfsjobmount.h:28, from gvfsdaemon.c:41: ./gvfsbackend.h:40: error: redefinition of typedef 'GVfsBackend' ./gvfstypes.h:26: error: previous declaration of 'GVfsBackend' was here
Review of attachment 255801 [details] [review]: Looks good to me.
Comment on attachment 255801 [details] [review] do not redefine GVfsBackend commit a390856358db1d9fbdd6406d7d781bce0e93477b