build: do not redefine GVfsBackend

https://bugzilla.gnome.org/show_bug.cgi?id=708814